k8s/overlays/prev/digraph/digraph-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: digraph-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - fast.digraph.app
      secretName: digraph-frontend-tls
  rules:
    - host: fast.digraph.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: digraph-frontend
                port:
                  number: 3001
